fix(ui) horizontal scrolling issue in main-column table
* post-content内のテーブル等の幅が親要素を超える時にスクロールされない問題を解消

--- a/src/resources/sass/front/_main.scss
+++ b/src/resources/sass/front/_main.scss
@@ -25,6 +25,7 @@
 
 .main-column {
   @include pc-screen() {
+    overflow-x: auto;
     padding-right: 24px;
   }
 }
